@@ -5,7 +5,10 @@
 
 package org.rocksdb;
 
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
+import sun.misc.Unsafe;
 
 /**
  * Base class for slices which will receive direct
@@ -24,6 +27,173 @@ public class DirectSlice extends AbstractSlice<ByteBuffer> {
   private final boolean internalBuffer;
   private volatile boolean cleared = false;
   private volatile long internalBufferOffset = 0;
+
+  private static final Unsafe myUnsafe;
+  static {
+    try {
+      Field field = Unsafe.class.getDeclaredField("theUnsafe");
+      field.setAccessible(true);
+      myUnsafe = (Unsafe)field.get(null);
+    } catch (Exception e) {
+        throw new RuntimeException("Failed to get Unsafe instance", e);
+    }
+  }
+  public static Unsafe getUnsafe() { return myUnsafe; }
+
+  static int getFieldOffset(Class<?> clazz, String fieldName) throws Exception {
+    Class<?> currentClass = clazz;
+    while (currentClass != null) {
+      try {
+        Field field = currentClass.getDeclaredField(fieldName);
+        // java --add-opens java.base/java.nio=ALL-UNNAMED is required
+        // for this line, but we set fields by Unsafe, so we can ignore
+        // the access check, and Unsafe can access private fields
+        //field.setAccessible(true); // not needed for Unsafe
+        return (int) myUnsafe.objectFieldOffset(field);
+      } catch (NoSuchFieldException e) {
+        currentClass = currentClass.getSuperclass();
+      }
+    }
+    throw new NoSuchFieldException("Field '" + fieldName + "' not found in " + clazz);
+  }
+
+  private static final Method cleanMethod;
+  private static final boolean destroyDirectBufferCleaner;
+  private static final int cleanerOffset;
+  private static final int addressOffset;
+  private static final int capacityOffset;
+  static {
+    int cleanerOffset0 = -1; // -1 for field is not found or not accessible
+    int addressOffset0 = -1;
+    int capacityOffset0 = -1;
+    try {
+      Class<?> clazz = newZeroCopyDirectBuffer0().getClass();
+      cleanerOffset0 = getFieldOffset(clazz, "cleaner");
+      addressOffset0 = getFieldOffset(clazz, "address");
+      capacityOffset0 = getFieldOffset(clazz, "capacity");
+    } catch (Exception e) {
+      cleanerOffset0 = -1;
+      addressOffset0 = -1;
+      capacityOffset0 = -1;
+      System.err.println(
+        "ERROR: Failed to find fields: cleaner,address,capacity in DirectByteBuffer,\n" +
+        "   zero copy with old API is disabled, try add java startup option\n" +
+        "        --add-opens java.base/java.nio=ALL-UNNAMED,\n" +
+        "   detailed err:\n" + e.getMessage());
+    }
+    cleanerOffset = cleanerOffset0;
+    addressOffset = addressOffset0;
+    capacityOffset = capacityOffset0;
+
+    // default to false for safety and backward compatibility
+    boolean destroyDirectBufferCleaner0 = false;
+    Method cleanMethod0 = null;
+    String env = System.getenv("ROCKSDB_FORCE_DIRECT_BUFFER_ZERO_COPY");
+    if (env != null) {
+      destroyDirectBufferCleaner0 = Boolean.parseBoolean(env);
+    }
+    if (cleanerOffset > 0 && destroyDirectBufferCleaner0) {
+      try {
+        ByteBuffer bufferWithCleaner = ByteBuffer.allocateDirect(64);
+        Object cleaner = myUnsafe.getObject(bufferWithCleaner, cleanerOffset);
+        Class<?> clazz = cleaner.getClass();
+        cleanMethod0 = clazz.getDeclaredMethod("clean");
+        //cleanMethod0.setAccessible(true); // it is public, not needed
+      }
+      catch (Exception e) {
+        System.err.println(
+          "WARN: Failed to access cleaner.clean() method, " +
+          "zero copy on ByteBuffer.allocateDirect(cap) is not supported.\n" +
+          "    detailed err:\n" + e.getMessage());
+        cleanMethod0 = null;
+        destroyDirectBufferCleaner0 = false;
+      }
+    }
+    cleanMethod = cleanMethod0;
+    destroyDirectBufferCleaner = destroyDirectBufferCleaner0;
+  }
+
+  private static native ByteBuffer newZeroCopyDirectBuffer0();
+  public static ByteBuffer newZeroCopyDirectBuffer() {
+    if (!supportZeroCopy()) {
+      throw new UnsupportedOperationException(
+        "Zero-copy is not supported, try add java startup option " +
+        "--add-opens java.base/java.nio=ALL-UNNAMED");
+    }
+    return newZeroCopyDirectBuffer0();
+  }
+  public static void directBorrowMemory(ByteBuffer buf, long ptr, long cap) {
+    if (!buf.isDirect()) {
+      throw new IllegalArgumentException("The ByteBuffer must be direct");
+    }
+    if (!supportZeroCopy()) {
+      throw new UnsupportedOperationException(
+        "Zero-copy is not supported, try add java startup option " +
+        "--add-opens java.base/java.nio=ALL-UNNAMED");
+    }
+    if (!supportDirectBorrowMemory(buf)) {
+      throw new UnsupportedOperationException(
+        "The ByteBuffer has a cleaner, can not reset address and capacity");
+    }
+    directBorrowMemoryUnchecked(buf, ptr, cap);
+  }
+  public static void directBorrowMemoryUnchecked(ByteBuffer buf, long ptr, long cap) {
+    // java makes simple things complicated,
+    // to implement zero-copy, we have to do such dirty work
+    //System.out.println("Reset DirectByteBuffer: " + buf + ", new ptr: " + ptr + ", cap: " + cap);
+    if (destroyDirectBufferCleaner) {
+      Object cleaner = myUnsafe.getObject(buf, cleanerOffset);
+      if (cleaner != null) {
+        // call cleaner.clean(), then destroy the cleaner, so that the buffer
+        // can be reset and reused, otherwise, it will may cause memory leaks
+        //System.out.println("Clean DirectByteBuffer: " + buf + ", new ptr: " + ptr + ", cap: " + cap);
+        try {
+          cleanMethod.invoke(cleaner);
+          myUnsafe.putObject(buf, cleanerOffset, null);
+        } catch (Exception e) {
+          System.err.println(
+            "ERROR: Failed to invoke DirectByteBuffer.cleaner.clean(), " +
+            "detailed err:\n" + e.getMessage());
+        }
+      }
+    }
+    myUnsafe.putLong(buf, addressOffset, ptr);
+    myUnsafe.putInt(buf, capacityOffset, (int)cap);
+    buf.clear(); // reset position, limit, mark
+  }
+  public static boolean supportZeroCopy() {
+    return cleanerOffset != -1;
+  }
+  public static boolean supportDirectBorrowMemory(ByteBuffer buffer) {
+    // to help zero-copy, we need to check if the buffer has a cleaner,
+    // if it has, its address and capacity can not be reset, thus can not
+    // use zero-copy.
+    assert buffer.isDirect() : "The ByteBuffer must be direct";
+    if (cleanerOffset == -1) {
+      return false; // can not be reset
+    }
+    if (destroyDirectBufferCleaner) {
+      return true; // can be reset
+    }
+    return myUnsafe.getObject(buffer, cleanerOffset) == null;
+  }
+  public static int copyToDirectBuffer(long ptr, long len, ByteBuffer buf) {
+    assert buf.isDirect() : "The ByteBuffer must be direct";
+    long destAddr = myUnsafe.getLong(buf, addressOffset);
+    int cplen = Math.min((int)len, buf.remaining());
+    myUnsafe.copyMemory(ptr, destAddr + buf.position(), cplen);
+    return cplen;
+  }
+  public static long getDirectAddress(ByteBuffer buf) {
+    assert buf.isDirect();
+    assert addressOffset >= 0;
+    return myUnsafe.getLong(buf, addressOffset);
+  }
+  public static long getDirectCapacity(ByteBuffer buf) {
+    assert buf.isDirect();
+    assert capacityOffset >= 0;
+    return myUnsafe.getLong(buf, capacityOffset);
+  }
 
   /**
    * Called from JNI to construct a new Java DirectSlice
